--- a/astro/src/layouts/Post.astro
+++ b/astro/src/layouts/Post.astro
@@ -58,5 +58,17 @@ const {
     <main itemprop="text">
       <slot />
     </main>
+    <footer>
+      <script
+        is:inline
+        src="https://utteranc.es/client.js"
+        repo="eligundry/eligundry.com"
+        issue-term="pathname"
+        label="✨💬✨  Blog"
+        theme="preferred-color-scheme"
+        crossorigin="anonymous"
+        async
+      ></script>
+    </footer>
   </article>
 </BaseLayout>
