--- a/astro/src/pages/talks.astro
+++ b/astro/src/pages/talks.astro
@@ -1,13 +1,13 @@
 ---
+import { getCollection } from 'astro:content'
 import dateFns from 'date-fns'
 import Layout from '../layouts/Layout.astro'
 
-const talks = (await Astro.glob('./talks/*.mdx')).sort((a, b) =>
-  dateFns.compareDesc(
-    new Date(a.frontmatter.date),
-    new Date(b.frontmatter.date)
-  )
+const talks = (await getCollection('talks')).sort((a, b) =>
+  dateFns.compareDesc(new Date(a.data.date), new Date(b.data.date))
 )
+
+console.log(talks)
 ---
 
 <Layout
@@ -20,9 +20,9 @@ const talks = (await Astro.glob('./talks/*.mdx')).sort((a, b) =>
       talks.map((talk) => (
         <article>
           <h2 class="my-2">
-            <a href={talk.url}>{talk.frontmatter.title}</a>
+            <a href={`/${talk.collection}/${talk.slug}/`}>{talk.data.title}</a>
           </h2>
-          <p class="mb-0">{talk.frontmatter.description}</p>
+          <p class="mb-0">{talk.data.description}</p>
         </article>
       ))
     }
