--- a/astro/src/components/Post/ResponsiveIFrame.astro
+++ b/astro/src/components/Post/ResponsiveIFrame.astro
@@ -1,6 +1,4 @@
 ---
-import clsx from 'clsx'
-
 interface Props {
   src: string
   width: number
@@ -12,12 +10,12 @@ const { src, width, height, className } = Astro.props
 ---
 
 <div
-  class={clsx('relative', 'overflow-hidden', 'h-0', className)}
+  class:list={['relative', 'overflow-hidden', 'h-0', className]}
   style={{ paddingBottom: `${(height / width) * 100}%` }}
 >
   <iframe
     src={src}
-    class={clsx('absolute', 'w-full', 'h-full', 'top-0', 'left-0')}
+    class:list={['absolute', 'w-full', 'h-full', 'top-0', 'left-0']}
     frameborder={0}
     allowfullscreen="true"></iframe>
 </div>
