--- a/astro/src/components/Post/DemoVideo.astro
+++ b/astro/src/components/Post/DemoVideo.astro
@@ -1,6 +1,4 @@
 ---
-import clsx from 'clsx'
-
 interface Props {
   src: string
   alt: string
@@ -10,7 +8,7 @@ interface Props {
 const { src, alt, className } = Astro.props
 ---
 
-<video autoplay loop muted class={clsx('mx-auto', className)}>
+<video autoplay loop muted class:list={['mx-auto', className]}>
   <source src={src} />
   {alt}
 </video>
