--- a/astro/src/pages/blog.astro
+++ b/astro/src/pages/blog.astro
@@ -14,6 +14,17 @@ const tags = [
     return acc
   }, new Set<string>()),
 ]
+const readingTimes = (
+  await Promise.all(
+    posts.map(async (post): Promise<[string, number]> => {
+      const { remarkPluginFrontmatter } = await post.render()
+      return [post.slug, remarkPluginFrontmatter.readingTime ?? 1]
+    })
+  )
+).reduce((acc, [slug, readingTime]) => {
+  acc[slug] = readingTime ?? 1
+  return acc
+}, {} as Record<string, number>)
 ---
 
 <script>
@@ -82,7 +93,7 @@ const tags = [
             <div class="flex flex-row gap-4 [&>*]:m-0">
               <time datetime={post.data.date.toISOString()}>
                 <EmojiText label="calendar for the date" emoji="🗓">
-                  {dateFns.formatISO(new Date(post.data.date), {
+                  {dateFns.formatISO(post.data.date, {
                     representation: 'date',
                   })}
                 </EmojiText>
@@ -92,8 +103,8 @@ const tags = [
                   label="stopwatch denoting time to read article"
                   emoji="⏱"
                 >
-                  {post.data.readingTime}{' '}
-                  {post.data.readingTime > 1 ? 'Minutes' : 'Minute'}
+                  {readingTimes[post.slug]}{' '}
+                  {readingTimes[post.slug] > 1 ? 'Minutes' : 'Minute'}
                 </EmojiText>
               </p>
             </div>
