--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { GoogleFontsOptimizer } from 'astro-google-fonts-optimizer'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import FancyBackground from '../components/FancyBackground.astro'
@@ -46,7 +47,9 @@ const latestFeeling = await daylio.getLatest()
       rel="icon"
       href={`data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>${latestFeeling.emoji}</text></svg>`}
     />
-    <link rel="preconnect" href="https://fonts.gtatic.com" crossorigin="true" />
+    <GoogleFontsOptimizer
+      url="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&family=Fira+Code&family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap"
+    />
     <script is:inline>
       if (localStorage.getItem('theme') === null) {
         const prefersDark =
