--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -168,8 +168,8 @@ const shelves = {
                 alt={alt}
                 src={book.cover}
                 loading="lazy"
-                width="100"
-                height="160"
+                width={100}
+                height={160}
                 quality={90}
                 format="webp"
                 decoding="async"
@@ -217,8 +217,8 @@ const shelves = {
                   <Image
                     alt={alt}
                     src={album.cover}
-                    width="146"
-                    height="146"
+                    width={146}
+                    height={146}
                     quality={90}
                     format="webp"
                     loading="lazy"
